# apolo-11-project

./: README.md  config.py  interfaz.py  main.py  pyproject.toml  setup.cfg
backup/: APL-CLNM-0001.json  APL-CLNM-0002.json  APL-CLNM-0003.json  APL-CLNM-0004.json  APL-CLNM-0005.json  APL-CLNM-0006.json  APL-CLNM-0007.json  APL-CLNM-0008.json  APL-CLNM-0009.json  APL-CLNM-0010.json  APL-GALXONE-0001.json  APL-GALXONE-0002.json  APL-GALXONE-0003.json  APL-GALXONE-0004.json  APL-GALXONE-0005.json  APL-GALXONE-0006.json  APL-GALXONE-0007.json  APL-GALXONE-0008.json  APL-GALXONE-0009.json  APL-GALXONE-0010.json  APL-ORBONE-0001.json  APL-ORBONE-0002.json  APL-ORBONE-0003.json  APL-ORBONE-0004.json  APL-ORBONE-0005.json  APL-ORBONE-0006.json  APL-ORBONE-0007.json  APL-ORBONE-0008.json  APL-ORBONE-0009.json  APL-ORBONE-0010.json  APL-TMRS-0001.json  APL-TMRS-0002.json  APL-TMRS-0003.json  APL-TMRS-0004.json  APL-TMRS-0005.json  APL-TMRS-0006.json  APL-TMRS-0007.json  APL-TMRS-0008.json  APL-TMRS-0009.json  APL-TMRS-0010.json  (+10 more)
devices/: APL-CLNM-0001.json  APL-CLNM-0002.json  APL-CLNM-0003.json  APL-CLNM-0004.json  APL-CLNM-0005.json  APL-CLNM-0006.json  APL-CLNM-0007.json  APL-CLNM-0008.json  APL-CLNM-0009.json  APL-CLNM-0010.json  APL-GALXONE-0001.json  APL-GALXONE-0002.json  APL-GALXONE-0003.json  APL-GALXONE-0004.json  APL-GALXONE-0005.json  APL-GALXONE-0006.json  APL-GALXONE-0007.json  APL-GALXONE-0008.json  APL-GALXONE-0009.json  APL-GALXONE-0010.json  APL-ORBONE-0001.json  APL-ORBONE-0002.json  APL-ORBONE-0003.json  APL-ORBONE-0004.json  APL-ORBONE-0005.json  (+25 more)
(+20 files in other folders)
